core/anything-events/node_derive/tests/nodes/02-no-input-or-output.stderr
error: node needs at least one NodeReceiver or NodeSender
 --> tests/nodes/02-no-input-or-output.rs:5:10
  |
5 | #[derive(Node)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Node` (in Nightly builds, run with -Z macro-backtrace for more info)
